feat: logged page created

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
                     <Form  >
                         <input type="email" class="login-form-input" placeholder="Email">   
                         <input type="password" class="login-form-input" placeholder="Senha">
+                        <div id="errormessage-validation-">Sua senha deve ter no minimo 8 caracteres</div>
                         <input type="button" value="Entrar" id="login-form-button">
                     </Form>
                 </div>
                 <div id="divider-line-horizontal"></div>
                 <div class="account-create">
                     Não possui uma conta?
-                    <a href="http://logged_page.html" class="account-create-button">Criar</a>
+                    <a href="http://pages/logged_page.html" class="account-create-button">Criar</a>
                 </div>
             </div>
             <div id="divider-line-vertical"></div>
