--- a/pages/logged_page.html
+++ b/pages/logged_page.html
@@ -5,20 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="login_page.css">
-    <link rel="icon" href="./assets/logoagencia.png" type="image/x-icon">
+    <link rel="icon" href="../assets/logoagencia.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="./scripts/login.js"></script>
-    <link href="../index.css">
+    <link rel="stylesheet" href="../index.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Agência Tucano Tropical</title>
 </head>
 <body>
     <div class="logged_page">
         <header>
-            <img src="./assets/logoagencia.png" id="logo-image" /> 
+            <img src="../assets/logoagencia.png" id="logo-image" /> 
             <div id="header-title-text">Agência Tucano Tropical</div>
         </header>
+        <div class="image-container">
+            <div>Encontre as melhores casas, 
+                pontos comerciais e hoteis</div>
+        </div>
+        <div class="services-container">
+            <span>Nossos Serviços</span>
+            <div class="services">
+                <div class="service-card">
+                    <img src="../assets/services-cards/service-card1.png" alt="Residenciais">
+                    <span class="services-card-title">Residenciais</span>
+                    <span class="services-card-offer">123 ofertas</span>
+                </div>
+                <div class="service-card">
+                    <img src="../assets/services-cards/service-card2.png" alt="Comerciais">
+                    <span class="services-card-title">Comerciais</span>
+                    <span class="services-card-offer">93 ofertas</span>
+                </div>
+                <div class="service-card">
+                    <img src="../assets/services-cards/service-card3.png" alt="Hoteis">
+                    <span class="services-card-title">Hoteis</span>
+                    <span class="services-card-offer">23 ofertas</span>
+                </div>
+            </div>
+        </div>
+        <div class="appartaments-container">
+            <span>Melhores Oportunidades</span>
+            <div id="appartament-cards-container">
+                <div class="appartament-card">
+                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
+                    <span class="appartament-card-price">R$ 2.000.000</span>
+                    <span class="appartament-card-dimensions">132 m²</span>
+                    <div class="appartament-card-spefics">
+                        <div class="appartament-card-specifics-rooms">5 quartos</div>
+                        <div class="appartament-card-specifics-bathrooms">4 banheiros</div>
+                    </div>
+                </div>
+                <div class="appartament-card">
+                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="appartament-card">
+                    <img src="" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+        <footer>
+
+        </footer>
     </div>
 </body>
 </html>
