--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <link rel="icon" href="./assets/logoagencia.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="./scripts/login.js"></script>
-    <link href="./index.css">
+    <link rel="stylesheet" href="./index.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Agência Tucano Tropical</title>
 </head>
 <body>
+    
     <div class="login-page">
         <header>
-            <img src="./assets/logoagencia.png" id="logo-image" /> 
-            <div id="header-title-text">Agência Tucano Tropical</div>
+            <div id="logotype">
+                <img src="../assets/logoagencia.png" id="logo-image" /> 
+                <div id="header-title-text">Agência Tucano Tropical</div>
+            </div>
         </header>
         <section>
             <div class=" login-form-container">
                 <div class="login-title">Entre com seu email e senha</div>
-                <div class="login-form">
-                    <Form  >
-                        <input type="email" class="login-form-input" placeholder="Email">   
-                        <input type="password" class="login-form-input" placeholder="Senha">
-                        <div id="errormessage-validation-">Sua senha deve ter no minimo 8 caracteres</div>
-                        <input type="button" value="Entrar" id="login-form-button">
+                <div class="login-form" id="form-id">
+                    <Form method='post' onsubmit="validateAndRedirect()" >
+                        <input type="email" class="login-form-input" placeholder="Email" id="login-input-email">   
+                        <input type="password" class="login-form-input" placeholder="Senha" id="login-input-password">
+                        <div id="errormessage-validation"></div>
+                        <button id="login-form-button">Entrar</button>
+                        <!-- <input type="button" value="Entrar" id="login-form-button"> -->
                     </Form>
                 </div>
                 <div id="divider-line-horizontal"></div>
@@ -44,5 +47,6 @@
             </div>
         </section>
     </div>
+    <script src="./scripts/login.js" ></script>
 </body>
 </html>
