fix: Modal Fix.

--- a/pages/logged_page.html
+++ b/pages/logged_page.html
@@ -49,81 +49,10 @@
                 </div>
             </div>
         </div>
-        <div class="appartaments-container">
+        <div class="appartaments-container" >
             <span>Melhores Oportunidades</span>
             <div id="appartament-cards-container">
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
-                <div class="appartament-card">
-                    <img src="../assets/image_container_logged_page.jpg" alt="" srcset="">
-                    <span class="appartament-card-price">R$ 2.000.000</span>
-                    <span class="appartament-card-dimensions">132 m²</span>
-                    <div class="appartament-card-specifics">
-                        <div class="appartament-card-specifics-information">5 quartos</div>
-                        <div class="appartament-card-specifics-information">4 banheiros</div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <div id="modal-bottom" >
@@ -135,12 +64,12 @@
                     </svg>
                 </button>
                 <div id="modal-items">
-                    <div class="modal-room">5 quartos</div>
-                    <div class="modal-bathroom">5 banheiros</div>
-                    <div class="modal-dimensions">232 m²</div>
-                    <div class="modal-items-2">
-                        <div class="modal-price">R$ 2.200.00</div>
-                        <div class="button-purchase"> Comprar</div>
+                    <div id="modal-room"><span>5 quartos</span></div>
+                    <div id="modal-bathroom"> <span>5 banheiros</span></div>
+                    <div id="modal-dimensions">232 m²</div>
+                    <div id="modal-items-2">
+                        <div id="modal-price">R$ 2.200.00</div>
+                        <div id="button-purchase"> Comprar</div>
                     </div>
                 </div>
             </div>
