feat: Add Mobile Pages

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="login_page.css">
     <link rel="icon" href="./assets/logoagencia.png" type="image/x-icon">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -15,6 +13,7 @@
 <body>
     
     <div class="login-page">
+        <!-- Desktop Header-->
         <header>
             <div id="logotype">
                 <img src="../assets/logoagencia.png" id="logo-image" /> 
@@ -22,6 +21,9 @@
             </div>
         </header>
         <section>
+            <!-- Image Logo Mobile-->
+            <img src="../assets/logoagencia.png" id="logo-image-mobile"  /> 
+            <!-- Form Container-->
             <div class=" login-form-container">
                 <div class="login-title">Entre com seu email e senha</div>
                 <div class="login-form" id="form-id">
@@ -30,16 +32,18 @@
                         <input type="password" class="login-form-input" placeholder="Senha" id="login-input-password">
                         <div id="errormessage-validation"></div>
                         <button id="login-form-button">Entrar</button>
-                        <!-- <input type="button" value="Entrar" id="login-form-button"> -->
                     </Form>
                 </div>
+                <!-- Divider -->
                 <div id="divider-line-horizontal"></div>
                 <div class="account-create">
                     Não possui uma conta?
                     <a href="/pages/error_page.html" class="account-create-button">Criar</a>
                 </div>
             </div>
+            <!-- Desktop Divider-->
             <div id="divider-line-vertical"></div>
+            <!-- Desktop Image Container-->
             <div class=" login-image-container">
                 <div class=" login-image-container-text">
                     Bem Vindo a agência Tucano Tropical
