refactor: refactor mockAPI with data.json

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div id="header-title-text">Agência Tucano Tropical</div>
             </div>
         </header>
-        <section>
+        <main>
             <!-- Image Logo Mobile-->
             <img src="../assets/logoagencia.png" id="logo-image-mobile"  /> 
             <!-- Form Container-->
@@ -49,7 +49,7 @@
                     Bem Vindo a agência Tucano Tropical
                 </div>
             </div>
-        </section>
+        </main>
     </div>
     <script src="./scripts/login.js" ></script>
 </body>
